actualizacion de ultimas clases

--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
     "platzi"
   ],
   "author": "Nahuel Torres <sr.nahueltorresgmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "type":"module"
 }
